feat: implement RAG semantic retrieval assistant and complete workspace features
- Add RAG pipeline with text extraction, chunking, and semantic search (GPT-5.6 Luna/Embeddings ready)
- Add document chunks Flyway migrations (V15, V16)
- Integrate automatic indexing on document review approval
- Enhance user module, submitter requests, and realtime updates
- Update .gitignore to exclude test outputs, downloaded docs, and env files
- Safe configuration with environment variable fallbacks (no hardcoded credentials or API keys)